--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "dotenv": "16.4.5",
     "marked": "~9.1.6",
     "ngx-markdown": "~17.1.1",
+    "ollama": "^0.5.16",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
