--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@gemini-angular-nestjs/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "client": "nx serve client",
+    "server": "nx serve server"
+  },
   "private": true,
   "devDependencies": {
     "@angular-devkit/build-angular": "~17.1.0",
@@ -73,6 +76,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^11.1.0",
     "zone.js": "~0.14.3"
   },
   "nx": {
